--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body{
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   margin: 0;
   padding: 0;
+  color: #EDEDED;
+
   /* Do not change margin or padding */
-  background: #f5f7fa;
+  background: #cd7f32;
 /* NOTE: do not change the background in media query */
 font-family: 'Open Sans', helvetica, sans-serif;
 /* NOTE you can change the fonts but always have a backup */
@@ -24,7 +26,7 @@ font-family: 'Open Sans', helvetica, sans-serif;
   text-decoration: none;
 }
 .mainNav .menu {
-  background: #efefef;
+  background: #6b4d33;
   box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.1);
   border-top: 1px solid #efefef;
   display: none;
@@ -39,15 +41,15 @@ font-family: 'Open Sans', helvetica, sans-serif;
   left: 0;
 }
 .mainNav .menu a {
-  color: #292938;
+  color: white;
   border-bottom: 1px solid #efefef;
   font-weight: bold;
   display: block;
   padding: 15px;
 }
 .mainNav .menu a:hover {
-  background: #292938;
-  color: #efefef;
+  background: #965F24;
+  color: silver;
 }
 .mainNav .navBars {
   display: inline-block;
@@ -77,7 +79,7 @@ font-family: 'Open Sans', helvetica, sans-serif;
 /* NOTE: END Navigation styles --------------------- */
 
 .wrapper{
-  background: #f5f7fa;
+  background: #6B4D339C;
   margin: auto;
   width:90%;
   /* Width with a margin auto keeps the content from touching the edge */
@@ -97,13 +99,17 @@ img{
 }
 /* NOTE: All other images will need a class to style the width if you want them a diffrent size */
 
+.img1{
+  width: 800px;
+}
+
 h1{
   text-align: center;
   padding-top: 20px;
 }
 
 footer{
-  background: rgba(69, 126, 110, 0.67);
+  background: #6b4d33;
   text-align: center;
   padding:20px;
 }
