--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,18 @@ img{
   width: 800px;
 }
 
+.img2 {
+  width: 500px;
+}
+
+.img3 {
+  width: 535px;
+}
+
+.img4 {
+  width: 450px;
+}
+
 h1{
   text-align: center;
   padding-top: 20px;
