--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,8 @@ footer{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 5px;
+        width: 90%;
+        margin: auto;
     }
     .center-this{
         margin-right: auto;
@@ -181,7 +183,9 @@ footer{
   .grid{
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      grid-column-gap: 5px;
+      grid-column-gap: 30px;
+      width: 90%;
+      margin: auto;
   }
   .grid div{
 
