--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+html {
+  scroll-behavior: smooth;
+}
+
+
 body{
   box-sizing: border-box;
   margin: 0;
@@ -161,6 +166,12 @@ img{
 
 .img9 {
   /* width: 400px; */
+}
+
+.jump {
+  width: 70px;
+  margin-right: 1500px;
+  border-radius: 50%;
 }
 
 .email {
@@ -347,9 +358,9 @@ footer{
 
   .grid{
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       grid-column-gap: 30px;
-      width: 90%;
+
       margin: auto;
       padding-right: 30px;
   }
@@ -418,6 +429,12 @@ footer{
   .img9 {
     width: 700px;
     margin-left: -50px;
+  }
+
+  .jump {
+    width: 80px;
+    margin-right: 1500px;
+    border-radius: 50%;
   }
 
   .fname{
@@ -561,7 +578,13 @@ footer{
 }/* NOTE: DO NOT DELETE THIS LAST CURLY BRACE */
 /* NOTE END MEDIUM SIZE DISPLAYS ----------------------- */
 
+@media only screen and (min-width:1000px){
 
+  .grid{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+
+}
 
 /* NOTE START LARGE SCREEN STYLES BELOW ---------------- */
 @media only screen and (min-width: 1200px) {
@@ -636,6 +659,13 @@ footer{
     .img9 {
       width: auto;
       margin-left: -50px;
+    }
+
+    .jump {
+      display: none;
+      width: 80px;
+      margin-right: 1500px;
+      border-radius: 50%;
     }
 
     .fname{
