--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 html {
   scroll-behavior: smooth;
 
-  max-width: 100%;
-  overflow-x: hidden;
+
 }
 
 
@@ -173,8 +172,11 @@ img{
 
 .jump {
   width: 70px;
-  margin-right: 1500px;
-  border-radius: 50%;
+/* margin-right: 1500px; */
+position: fixed;
+border-radius: 50%;
+left: 8px;
+bottom: 10px;
 }
 
 .email {
