--- a/styles.css
+++ b/styles.css
@@ -266,8 +266,8 @@ bottom: 10px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 1000px;
-  padding: 100px;
+  padding: 110px;
+  margin-bottom: 123px;
   font-size: 30px;
 }
 
